--- a/src/components/About.css
+++ b/src/components/About.css
@@ -1,5 +1,3 @@
-/* About.css */
-
 .text-justify {
   text-align: justify;
 }
@@ -13,6 +11,10 @@
     transform: translateY(0);
     opacity: 1;
   }
+}
+
+.container {
+  min-height: 100vh;
 }
 
 p {
