--- a/src/components/Navigation.css
+++ b/src/components/Navigation.css
@@ -10,43 +10,23 @@
 /* Tambahkan CSS berikut */
 .navbar {
   transition: transform 0.3s ease-out;
-  background-color: #343a40;
+  background-color: blueviolet;
   padding: 10px 20px;
 }
 
   .navbar-brand {
-    color: #fff;
     font-size: 24px;
   }
   
-  .navbar-nav .nav-link {
-    color: #fff;
+  .nav-link-yellow {
     font-size: 16px;
+    color: yellow;
     margin-right: 10px;
   }
   
-  .navbar-nav .nav-link:hover,
-  .navbar-nav .nav-link:focus {
-    color: #17a2b8;
-  }
-  
-  /* Active Nav Link Styles */
-  .navbar-nav .active .nav-link {
-    color: #17a2b8;
-  }
-  
   /* Responsive Styles */
-  @media (max-width: 767px) {
-    .navbar-toggler {
-      border-color: #fff;
-    }
-  
-    .navbar-toggler-icon {
-      background-color: #fff;
-    }
-  
+  @media (max-width: 767px) {  
     .navbar-collapse {
-      background-color: #343a40;
       padding: 10px;
     }
   
@@ -58,4 +38,3 @@
       margin-bottom: 10px;
     }
   }
-  
